# playerprop

./: .eslintrc.js  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  ROADMAP.md  commitlint.config.js  dev_requirements.txt  monitoring_requirements.txt  mypy.ini  optimization_notes.md  pre-commit-config.yaml  prettier.config.js  pylintrc  pyproject.toml  renovate.json  requirements.txt  third_party_licenses.txt
.github/: pull_request_template.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  code_quality.yml  security_scan.yml
apps/sports-prop-predictor-admin/: index.html  package.json
apps/sports-prop-predictor-server/: .env  package.json
backend/api/: authController.ts  authRoutes.ts  player_prop_routes.js
backend/auth/: authentication_logs.py  consent_management.py  jwt_middleware.py  login_attempt_tracker.py  oauth_strategies.py  password_strength_validator.py  password_utils.py  role_based_access_control.py  session_management.py  two_factor_auth.py
backend/database/: data_validation_rules.yml  database.py  query_optimizations.sql  relationship_mappings.json  schema.sql  seed_data.sql
backend/middleware/: authMiddleware.ts
benchmark_scripts/: performance_benchmark.py
config/: config_manager.py  setup.py  wsgi.py
docs/: API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  PERFORMANCE_GUIDLINES.md  TROUBLESHOOTING.md  model_card.md
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
security/: log_rotation_policy.md
src/: server.ts
(+139 files in other folders)
