[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-prop-predictor"
version = "0.1.0"
description = "Machine learning-powered sports proposition outcome predictor"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "mypy",
    "black",
    "isort"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903"   # too-few-public-methods
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3